# fm-faucet-leptos

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  flake.nix  index.html  justfile  package-lock.json  package.json  tailwind.config.js
src/: app.rs  error_template.rs  fallback.rs  lib.rs  main.rs
src/component/: app.rs  join.rs  mod.rs  scan.rs
src/context/: app.rs
style/: index.css
