[package]
name = "fm_faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71" }
bitcoincore-rpc = { version = "0.17.0" }
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
dotenv = "0.15.0"
image = "0.24.6"
leptos = { version = "0.4.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.4.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.4.6", features = ["nightly", "csr"] }
log = "0.4.17"
qrcode-generator = "4.1.8"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.64", features = ["HtmlVideoElement"] }
js-sys = "0.3.64"


[dev-dependencies]
rusty-hook = "^0.11.2"
